--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -18,7 +18,7 @@
         </section>
         <nav>
             <a href="{{ url_for('features') }}" class="cta-button">Features</a>
-            <a href="{{ url_for('logout') }}" class="cta-button">Logout</a>
+            <a href="{{ url_for('more') }}" class="cta-button">More</a>
         </nav>
     </main>
     <footer>
