--- a/templates/more.html
+++ b/templates/more.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <nav>
-            <a href="{{ url_for('update_account') }}" class="cta-button">Change Login Information</a>
+            <a href="{{ url_for('change_login_info') }}" class="cta-button">Change Login Information</a>
             <a href="{{ url_for('logout') }}" class="cta-button logout-button">Logout</a>
         </nav>
     </main>
