--- a/templates/change_username.html
+++ b/templates/change_username.html
@@ -11,6 +11,7 @@
         <h1>Change Username</h1>
     </header>
     <main>
+        <p class="error">{{ error }}</p>
         <form action="{{ url_for('change_username') }}" method="POST">
             <label for="new_username">New Username:</label>
             <input type="text" id="new_username" name="new_username" required>
