--- a/templates/login.html
+++ b/templates/login.html
@@ -11,6 +11,7 @@
         <h1>Login to Your Account</h1>
     </header>
     <main>
+        <p class="error">{{ error }}</p>
         <form method="POST">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
