--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,6 +11,7 @@
         <h1>Create Your Account</h1>
     </header>
     <main>
+        <p class="error">{{ error }}</p>
         <form method="POST">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
