--- a/templates/data.html
+++ b/templates/data.html
@@ -8,11 +8,21 @@
 </head>
 <body>
     <div class="form-container">
-        <h2>Upload CSV for Data Set 1</h2>
+        <h2>Upload CSV for OVerview of Bank Account Balances</h2>
         <form action="/data_overview" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="overview">Choose CSV file:</label>
                 <input type="file" id="overview" name="overview" accept=".csv" required>
+            </div>
+            <button type="submit" class="submit-btn">Upload File</button>
+        </form>
+    </div>
+    <div class="form-container">
+        <h2>Upload CSV for Individual Transactions</h2>
+        <form action="/data_transaction" method="POST" enctype="multipart/form-data">
+            <div class="form-group">
+                <label for="transaction">Choose CSV file:</label>
+                <input type="file" id="transaction" name="transaction" accept=".csv" required>
             </div>
             <button type="submit" class="submit-btn">Upload File</button>
         </form>
