Fix "empty-history" indicator not removed when iniatinig a new chat

--- a/templates/ai_chatbot.html
+++ b/templates/ai_chatbot.html
@@ -49,7 +49,8 @@
         <div class="main-content">
             <header>
                 <div class="header-content">
-                    <button id="back-button" onclick="window.location.href='{{ url_for('features') }}'" title="Back to Features">
+                    <button id="back-button" onclick="window.location.href='{{ url_for('features') }}'"
+                        title="Back to Features">
                         <span class="material-symbols-outlined">arrow_back</span>
                     </button>
                     <h1 id="chat-header-title">
@@ -260,6 +261,12 @@
 
         function addChatToSidebar(id, firstMessage) {
             const sidebar = document.querySelector('.chat-list');
+
+            const emptyHistory = sidebar.querySelector('.empty-history');
+            if (emptyHistory) {
+                sidebar.removeChild(emptyHistory);
+            }
+
             const div = document.createElement('div');
             div.className = 'chat-item';
             div.innerHTML = `
