--- a/static/scenario_simulation.css
+++ b/static/scenario_simulation.css
@@ -103,7 +103,7 @@ input:focus, select:focus {
 }
 
 .cta-button:hover {
-    background-color: #0055a4;
+    background-color: #007BFF;
 }
 
 .summary-container {
