--- a/templates/ai_chatbot.html
+++ b/templates/ai_chatbot.html
@@ -49,8 +49,7 @@
         <div class="main-content">
             <header>
                 <div class="header-content">
-                    <button id="back-button" onclick="window.location.href='{{ url_for('features') }}'"
-                        title="Back to Features">
+                    <button id="back-button" onclick="window.location.href='{{ url_for('features') }}';" title="Back to Features">               
                         <span class="material-symbols-outlined">arrow_back</span>
                     </button>
                     <h1 id="chat-header-title">
