--- a/static/styles.css
+++ b/static/styles.css
@@ -782,7 +782,7 @@ body {
 header {
     width: 100%;
     background-color: #007BFF;
-    color: white;
+    color: #007BFF;
     padding: 20px 0;
     text-align: center;
     font-size: 2em;
